--- a/templates/blog/index.html
+++ b/templates/blog/index.html
@@ -1,20 +1,18 @@
-{% extends "base.html" %} <!-- existing line -->
+{% extends "base.html" %}
 {% load blog_extras %}
-
 {% block content %}
     <h2>Blog Posts</h2>
     {% for post in posts %}
-    <div class="row">
-        <div class="col">
+    {% row "border-bottom" %}
+        {% col "border-bottom" %}
             <h3>{{ post.title }}</h3>
-              <small>By {{ post.author|author_details:request.user }} on {{ post.published_at|date:"M, d Y" }}</small>
+            {% include "blog/post-byline.html" %}
             <p>{{ post.summary }}</p>
             <p>
                 ({{ post.content|wordcount }} words)
-                <a href="#">Read More</a>
+                <a href="{% url "blog-post-detail" post.slug %}">Read More</a>
             </p>
-        </div>
-    </div>
+        {% endcol %}
+    {% endrow %}
     {% endfor %}
-
 {% endblock %}
